# libaero

./: .gitmodules  README.md  USAGE.md  aero.vala  example.ui  main.vala  meson.build  meson_options.txt  resource.xml  style.css
apps/: meson.build
apps/aero_photos/: main.cmb  main.ui  main.vala  meson.build  resource.xml
apps/demo1/: demo1.cmb  demo1.glade  demo1.ui  main.vala  meson.build  resource.xml
apps/mspaint/: README.md  main.cmb  main.glade  main.ui  main.vala  menu.ui  meson.build  newdialog.vala  rclick.ui  resource.xml  resources_icons.xml
apps/notepad/: main.cmb  main.ui  main.vala  menu.ui  meson.build  resource.xml
apps/shell/: README.md  main.vala  meson.build  resource.xml
apps/shell/style/: meson.build  shell.scss
apps/shell/templates/: meson.build  shutdown_menu.ui  startmenu.cmb  startmenu.ui  taskbar.glade
demos/: demo1.cmb  demo1.ui
inspo/: 5098.winmain_beta1.050628-1740_3.xcf  HkdUi.xcf
lib/: icon_resource.xml  meson.build  resource.xml
lib/catalog/: Aero.xml  libaero.xml  meson.build
lib/classes/: action.vala  actionbutton.vala  aero.vala  appmenu.vala  meson.build  messagebox.vala  navbuttons.vala  orb.vala  ribbon.vala  window.vala  wizard.vala
lib/icons/orig/: url.txt
lib/stylesheet/: meson.build  style.scss
lib/templates/: appmenu.glade  appmenuactionlist.glade  meson.build  windowcontrols.cmb  windowcontrols.ui  wizard.cmb  wizard.ui  wizardchoicebutton.cmb  wizardchoicebutton.glade  wizardchoicebutton.ui  wizardoptionbutton.cmb  wizardoptionbutton.ui
stylesheet/: style.scss
templates/: windowcontrols.cmb  windowcontrols.ui  wizard.cmb  wizard.ui
utils/: glade2gtk4.py  gmenu_edit  ico2png.py  menu_editor.py  mkdummylib.py
